--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <body class="page">
 
     <header class="header content-width">
-      <div aria-hidden="true" class="header__logo">&lt;/HTML&gt;</div>
+      <a class="header__logo-link" href="#0">
+        <p aria-hidden="true" class="header__logo">&lt;/HTML&gt;</p>
+      </a>
       <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -61,14 +63,23 @@
         <li class="card-list-item">
             <article class="card">
               <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-              <img class="card__image" src="./images/image.jpg" alt="микроавтобус с диваном внутри на природе ночью">
+              <div class="card__image-wrapper">
+                <span class="card__label label-stroke">&lt;/HTML&gt;</span>
+                <img class="card__image" src="./images/image.jpg" alt="микроавтобус с диваном внутри на природе ночью">
+              </div>
               <div class="card__text-wrapper">
                 <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. 
                                       И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
                 <p class="card__text">Место для ваших воспоминаний о начале обучения.</p>
               </div>
               <div class="card__like-wrapper">
-                <img class="like-icon" src="./svg/heart.svg" alt="иконка лайка">
+                <!-- <img class="like-icon" src="./svg/heart.svg" alt="иконка лайка"> -->
+                <svg
+                viewbox="0 0 40 40"
+                class="like-icon"
+              >
+                <use href="./svg/heart_optimized.svg#heart_optimized">
+              </svg>
                 <button class="card__like-button button">
                   <span class="button__text">Like</span>
                 </button>
@@ -177,17 +188,22 @@
       >
         <svg
           viewbox="0 0 40 40"
-          class="floppy-img"
+          class="footer__floppy-img"
         >
           <use href="./svg/floppy_optimized.svg#floppy_optimized">
         </svg>
-        <span class="button__text">Сохранить на память</span>
+        <p class="button__text">Сохранить на память</p>
       </button>
     </footer>
 
     <dialog class="dialog" id="dialog-window">
       <div class="dialog__text-wrapper">
-        <img src="./svg/floppy_optimized.svg" alt="иконка дискеты">
+        <svg
+          viewbox="0 0 40 40"
+          class="dialog__floppy-img"
+        >
+          <use href="./svg/floppy_optimized.svg#floppy_optimized">
+        </svg>
         <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
       </div>
         <button 
