test errors fixed

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           class="footer__floppy-img"
           aria-hidden="true"
         >
-          <use href="./svg/floppy_optimized.svg#floppy_optimized">
+          <use href="./svg/floppy_optimized.svg#floppy_optimized" />
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
@@ -485,7 +485,7 @@
           class="dialog__floppy-img"
           aria-hidden="true"
         >
-          <use href="./svg/floppy_optimized.svg#floppy_optimized">
+          <use href="./svg/floppy_optimized.svg#floppy_optimized" />
         </svg>
         <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
       </div>
